<resources>
    <string name="app_name">JPlayground</string>
    <string name="main_click_again">again to exit!</string>
    <string name="module_main">Playground</string>
    <string name="module_sample">Sample</string>
    <string name="module_to_do">To-Do</string>
    <string name="module_to_do_mvp">To-Do-MVP</string>
    <string name="sample_layout_city">Singapore</string>
    <string name="sample_layout_camera">Camera</string>
    <string name="sample_layout_settings">Settings</string>
    <string name="sample_layout_camera_value">Leica M Typ 240</string>
    <string name="sample_layout_settings_value">ƒ/4 16s ISO 200</string>
    <string name="sample_layout_discard">DISCARD</string>
    <string name="sample_layout_button">BUTTON</string>
    <string name="sample_layout_title">Layout</string>
    <string name="sample_des_placeholder">Placeholder</string>
    <string name="sample_layout_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="item_sample_layout_search">search</string>
    <string name="item_sample_layout_delete">delete</string>
    <string name="item_sample_layout_near">near</string>
    <string name="item_sample_layout_refresh">refresh</string>
    <string name="nav_drawer_open">open</string>
    <string name="nav_drawer_close">close</string>
    <string name="item_camera">Camera</string>
    <string name="item_gallery">Gallery</string>
    <string name="item_share">Share</string>
    <string name="item_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="user_name">wptdxii</string>
    <string name="user_email">wptdxii@gmail.com</string>
    <string name="sample_drawer_title">Drawer</string>
    <string name="todo_activity_tasks_nav_header_title">TO-DOs</string>
    <string name="todo_activity_tasks_drawer_action_list">TO-Do List</string>
    <string name="todo_activity_tasks_drawer_action_statistics">Statistics</string>
    <string name="todo_no_tasks_add">Add a TO-DO item +</string>
    <string name="todo_tasks_fragment_menu_clear_completed">Clear Completed</string>

    <string name="todo_no_tasks_all">You have no TO-DOs!</string>
    <string name="todo_no_tasks_active">You have no active TO-DOs</string>
    <string name="todo_no_tasks_completed">You have no completed TO-DOs</string>
    <string name="todo_tasks_filter_all">All TO-DOs</string>
    <string name="todo_tasks_filter_active">Active TO-DOs</string>
    <string name="todo_tasks_filter_completed">Completed TO-DOs</string>
    <string name="todo_loading_tasks_error">Error while loading tasks</string>
    <string name="sample_system_bar_title">SystemBar</string>
    <string name="sample_dagger_sample_title">DaggerSample</string>
    <string name="sample_rx_sample_title">RxSample</string>

</resources>
