<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera_alt_black"
            android:title="@string/item_camera"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_insert_photo_black"
            android:title="@string/item_gallery"/>
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/item_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black"
                android:title="@string/item_send"/>
        </menu>
    </item>
</menu>