<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_176"
    android:background="@color/pink_light"
    android:padding="@dimen/spacing_16">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_4"
        android:text="@string/user_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_4"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/tv_avatar"
        android:layout_width="@dimen/size_70"
        android:layout_height="@dimen/size_70"
        android:contentDescription="@string/sample_des_placeholder"
        android:scaleType="fitXY"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>